# Dominik-Projects

./: .gitignore  Observer_Bridge_v5.py  README.md  Start_V5.sh
AutoRL/: README.md  pyproject.toml
AutoRL/src/: config.py
AutoRL/src/core/: agent.py  kernels.py  metrics.py  trainer.py  vector_runner.py
AutoRL/src/core/models/: common.py  drqn.py  drqn_c51.py  r2d2.py
AutoRL/src/core/replay/: per_sequence_HP.py
AutoRL/src/envs/: make_env.py
AutoRL/src/eval/: evaluate.py
AutoRL/src/orchestrators/: immune.py  knowledge_transfer.py  nas.py  pbt.py
AutoRL/src/run/: main.py  runners.py
AutoRL/src/telemetry/: monitoring.py
AutoRL/src/utils/: toolkit.py
Double pendulum Next-Frame Prediction/: Pendulum.ipynb
Forecasting/: Forecasting.ipynb  LSTM.ipynb  V2.ipynb
Forecasting/.ipynb_checkpoints/: V3-checkpoint.ipynb
Hierarchical Linear Model - Bayesian/: Hierarchical_data_simulation.ipynb
House Prices - Advanced Regression Techniques/: House linear predictions prices .ipynb  Untitled.ipynb
House Prices - Advanced Regression Techniques/.ipynb_checkpoints/: House linear predictions prices -checkpoint.ipynb
IoT-Home Assistant/: BME680.ino
IoT-Home Assistant/BME680/: BME680.ino  README.md
IoT-Home Assistant/BME680_SHT41_VEML7700/V2_ESPHome/: BME680_SHT41_VEML7700.yaml
IoT-Home Assistant/External Components/Mt6701/: README.md  Sensor.PY  mt6701.cpp  mt6701.hpp
IoT-Home Assistant/Sensor_calibration/: Cal3.py  EDA.py  hardware_profile.json  history.csv  pyscript_sota_zlema.py
IoT-Home Assistant/esphome-custom-components/components/Mt6701/: README.md  sensor.py
IoT-Home Assistant/esphome-custom-components/esphome/components/BME680_Dominik_Custom/: Dom3ll_IAQ.cpp.crdownload  Dom3ll_IAQ.h.crdownload  sensor.py.crdownload
Kaggle/Titanic/: Titanic.ipynb
LLM Agent/KPO/: Adaptive_Agent_Handler.py  Adaptive_Agent_Prompts.py  Adaptive_Agent_Swarm.py  Agent_Config.py  Agent_Local_Client.py  Agent_Run.py  Agent_Scraper.py  KPO.ipynb  oczyszczone_dane.csv
LLM Agent/LLM_Talk/: Test.py
LLM Agent/LLM_Trainer/: LLM_Trainer.py
Minst/: Image MINST.ipynb  requirements.txt  y_train_filters.npy  y_val_filters.npy
Model-Based Reinforcement Learning/: MBRL.ipynb  train_nhits.py
OpenClaw_Work_AGI/: Bootstrap_V5.py  Install_V5.sh
Spaceship Titanic/: Spaceship Titanic.ipynb  wyniki.csv
Spaceship Titanic/.ipynb_checkpoints/: Spaceship Titanic-checkpoint.ipynb
Spaceship Titanic/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Spaceship Titanic/catboost_info/learn/: events.out.tfevents
Titanic/: .~lock.submission.csv#  README.MD  Titanic.ipynb  submission.csv  submission1.csv  submissionnnn.csv
Titanic/.ipynb_checkpoints/: Titanic-checkpoint.ipynb
Titanic/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Titanic/catboost_info/learn/: events.out.tfevents
(+5 files in other folders)
