[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Auto_RL"
version = "1.0.0"
description = "AutoRL: Framework PBT-NAS z architekturą Rainbow-DRQN i Self-Healing MLOps"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dominik", email = "dominik.sidorczuk93@gmail.com"}
]
maintainers = [
    {name = "AutoRL ", email = "dominik.sidorczuk93@gmail.com"}
]
keywords = [
    "reinforcement-learning",
    "drqn",
    "pbt",
    "nas",
    "mlops",
    "self-healing",
    "hydra",
    "pytorch"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU :: AMD ROCm",
]

# --- Główne Zależności (Strict Pinning dla Stabilności) ---
dependencies = [
    # --- Data Science & Math (Core) ---
    "numpy>=2.1.0",
    "numba>=0.59.0",

    # --- Data Validation & Observability ---
    "pydantic>=2.10.0",
    "typing-extensions>=4.9.0",
    "logfire>=4.0.0",

    # --- PyTorch Ecosystem  ---
    "torch>=2.5.0",

    # --- Reinforcement Learning Core ---
    "gymnasium[all]>=1.2.0",
    "mujoco>=3.2.0",

    # --- Utilities & Config ---
    # "tqdm>=4.67.0",
    "rich>=14.0.0",
    # "tensorboard>=2.18.0",
]

# --- Entry Points (CLI - The Clean Way) ---
[project.scripts]
autorl-train = "src.run_train:main"
autorl-eval = "src.run_eval:main"
autorl-gen-config = "scripts.config_generator:main"

[project.urls]
Homepage = "https://github.com/yourusername/Auto_RL"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "black>=24.0",
    "isort>=5.13.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0"
]

# --- Narzędzia Konfiguracyjne ---
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]
namespaces = false


[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["outputs", "multirun", "notebooks"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "N", "UP", "PL"]
ignore = ["E501"]
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:gymnasium.*",
    "ignore::UserWarning:torch.*"
]
